--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -139,6 +139,17 @@ header {
 	}
 }
 
+.tg-header-sticky-wrapper .tg-header-container {
+	padding-left: 2em;
+	padding-right: 2em;
+
+	@media screen and (min-width: 1300px) {
+		.custom-logo {
+			margin-left: -64px;
+		}
+	}
+}
+
 .tg-mobile-navigation li.menu-item-has-children .tg-submenu-toggle::after {
 	font-size: 15px;
 }
